Adding form methods, etc.
